Assign dive ids

--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -59,7 +59,7 @@
 
 @misc{costa2024a,
 	title = {Northern elephant seal tracking and diving {\textendash} raw and curated data},
-	author = {Costa, Daniel and Holser, Rachel and Keates, Theresa and Adachi, Taiki and Beltran, Roxanne and Champagne, Cory and Daniel, Crocker and Favilla, Arina and Fowler, Melinda and Gallo-Reynoso, Juan Pablo and Goetsch, Chandra and Hassrick, Jason and {Hückstädt}, Luis and Kendall-Bar, Jessica and Kienle, Sarah and Kuhn, Carey and Maresh, Jennifer and Maxwell, Sara and McDonald, Birgitte and McHuron, Elizabeth and Morris, Patricia and Naito, Yasuhiko and Pallin, Logan and Peterson, Sarah and Robinson, Patrick and Simmons, Samantha and Takahashi, Akinori and Teuschel, Nicole and Tift, Michael and Tremblay, Yann and Villegas-Amtman, Stella and Yoda, Ken},
+	author = {Costa, Daniel P. and Holser, Rachel and Keates, Theresa and Adachi, Taiki and Beltran, Roxanne and Champagne, Cory and Daniel, Crocker and Favilla, Arina and Fowler, Melinda and Gallo-Reynoso, Juan Pablo and Goetsch, Chandra and Hassrick, Jason and {Hückstädt}, Luis and Kendall-Bar, Jessica and Kienle, Sarah and Kuhn, Carey and Maresh, Jennifer and Maxwell, Sara and McDonald, Birgitte and McHuron, Elizabeth and Morris, Patricia and Naito, Yasuhiko and Pallin, Logan and Peterson, Sarah and Robinson, Patrick and Simmons, Samantha and Takahashi, Akinori and Teuschel, Nicole and Tift, Michael and Tremblay, Yann and Villegas-Amtman, Stella and Yoda, Ken},
 	year = {2024},
 	month = {10},
 	date = {2024-10-21},
