--- a/vignettes/exploring-dives.Qmd
+++ b/vignettes/exploring-dives.Qmd
@@ -27,11 +27,32 @@ A large amount of northern elephant seal (*Mirounga angustirostris*) was publish
 
 ## Visualize a sample
 
+Show me a handful of dives
+
 ```{r}
 #| label: setup
 
 library(dplyr)
 library(ggplot2)
+devtools::load_all()
 theme_set(theme_bw())
+set.seed(1505)
+
+```
+
+```{r}
+#| label: dives
+
+dive_ids <- sample(unique(seal3d$dive_id), 4)
+for (d in dive_ids) {
+  p <- seal3d %>% 
+    filter(dive_id == d) %>% 
+    ggplot(aes(time, depth)) +
+    geom_line() +
+    scale_x_datetime(date_labels = "%Y-%m-%d %H:%M") +
+    scale_y_reverse("Depth (m)") +
+    theme(axis.title.x = element_blank())
+  print(p)
+}
 
 ```
